--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 
 
     <nav class="navbar navbar-expand-lg topNav">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets/img/logo.png" alt="logo">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
                 <span class="pe-7s-menu"></span>
@@ -28,7 +30,7 @@
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Logo</h5>
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="assets/img/logo.png" alt="logo"></h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
