--- a/index.html
+++ b/index.html
@@ -30,12 +30,13 @@
             <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
                 aria-labelledby="offcanvasNavbarLabel">
                 <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="assets/img/logo.png" alt="logo"></h5>
+                    <h5 class="offcanvas-title" id="offcanvasNavbarLabel"><img src="assets/img/logo.png" alt="logo">
+                    </h5>
                     <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                         aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
-                    <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 MenuList"> 
+                    <ul class="navbar-nav justify-content-center flex-grow-1 pe-3 MenuList">
                         <li class="nav-item">
                             <a class="nav-link" href="#">Home</a>
                         </li>
@@ -57,11 +58,11 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contact</a>
                         </li>
-                         
+
                     </ul>
                     <div class="menu-login-btn align-self-center gap-3 d-flex">
                         <a href="" class="theme-btn "><span class="pe-7s-user"></span> Login</a>
-                        <a href="" class="theme-btn"><span class="pe-7s-portfolio"></span> Register</a>
+                        <a href="" class="theme-btn"><span class="pe-7s-candidates"></span> Register</a>
                     </div>
                 </div>
             </div>
@@ -81,7 +82,8 @@
                         <p class="text-white">Find great job for build your bright career. Have many job in this
                             plactform.</p>
                         <div class="banner-form">
-                            <a href="" class="toggle">
+                            <a class="toggle" data-bs-toggle="collapse" href="#toggleInfo" role="button"
+                                aria-expanded="false" aria-controls="toggleInfo">
                                 <span class="pe-7s-menu"></span>
                             </a>
                             <form action="" class="banner-search-form">
@@ -107,19 +109,260 @@
                             </form>
                         </div>
                     </div>
+                    <div class="banner-range">
+                        <div class="collapse" id="toggleInfo">
+                            <div class="rang-cont">
+                                <div class="range-item">
+                                    <div class="range-title">
+                                        <div class="h5">Distance</div>
+                                    </div>
+                                    <div class="range-wrap">
+                                        <input type="range" class="range" min="0" max="200" value="70">
+                                        <span>
+                                            <output class="bubble"></output>
+                                            MI
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="range-item">
+                                    <div class="range-title">
+                                        <div class="h5">Rating</div>
+                                    </div>
+                                    <div class="range-wrap">
+                                        <input type="range" class="range" min="0" max="100" value="60">
+                                        <span>
+                                            <output class="bubble"></output>
+                                            %
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="range-item">
+                                    <div class="range-title">
+                                        <div class="h5">Days Published</div>
+                                    </div>
+                                    <div class="range-wrap">
+                                        <input type="range" class="range" min="0" max="60" value="30">
+                                        <span>
+                                            <output class="bubble"></output>
+
+                                        </span>
+                                    </div>
+                                </div>
+                                <div class="range-item">
+                                    <div class="range-title">
+                                        <div class="h5">Location</div>
+                                    </div>
+                                    <select class="form-control">
+                                        <option value="1" selected="">Choose City</option>
+                                        <option value="2">New York</option>
+                                        <option value="3">California</option>
+                                        <option value="4">Illinois</option>
+                                        <option value="5">Texas</option>
+                                        <option value="6">Florida</option>
+                                    </select>
+                                </div>
+                                <div class="range-item">
+                                    <div class="range-title">
+                                        <div class="h5">Industry</div>
+                                    </div>
+                                    <select class="form-control">
+                                        <option value="1" selected="">Category</option>
+                                        <option value="2">Web Designer</option>
+                                        <option value="3">Web Developer</option>
+                                        <option value="4">Graphic Designer</option>
+                                        <option value="5">App Developer</option>
+                                        <option value="6">UI &amp; UX Expert</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="top-candidate-area py-100">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6 offset-lg-3">
+                    <div class="section-title text-center">
+                        <div class="h2">Top Candidates</div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum necessitatibus cupiditate
+                            voluptatibus architecto recusandae corrupti .</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row pt-5">
+                <div class="col-lg-12">
+                    <div class="candidates-item-list text-center">
+                        <ul class="candidates-filter">
+                            <!-- <li class="active" data-filter="*">All</li> -->
+                            <li class="theme-btn btn-md active" data-filter=".fin">Finance</li>
+                            <li class="theme-btn btn-md" data-filter=".acc">Accounting</li>
+                            <li class="theme-btn btn-md" data-filter=".mar">Marketing</li>
+                            <li class="theme-btn btn-md" data-filter=".develop">Developer</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-12 pt-3">
+                    <div class="candidates-grid row" id="container">
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">01</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">02</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">03</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">05</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn  mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">04</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn  mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                            <div class="candidates-item d-flex">
+                                <div class="candidates-number">06</div>
+                                <div class="candidates-img">
+                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
+                                </div> 
+                                <div class="candidates-text">
+                                    <div class="cand-nn">
+                                        <div class="h5">Lauran Benitez</div> 
+                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="experience">Fresher</div>
+                                    </div>
+                                    <div class="cand-nn">
+                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                    </div>
+                                    <div class="cand-nn  mt-auto">
+                                        <a href="#" class="theme-btn btn-md">View Profile</a>
+                                    </div> 
+                                    <div class="rating">Rating <span>200</span> </div>
+                                </div>
+                            </div>
+                        </div>  
+                    </div>
+                    <div class="candidates-button pt-5 text-center"> 
+                        <a href="#" class="theme-btn btn-md">
+                            View All Candidates
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
 
+
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="assets/js/plugin.js"></script>
     <script src="assets/js/min.js"></script>
+
+
 
 </body>
 
