--- a/index.html
+++ b/index.html
@@ -207,140 +207,180 @@
                 </div>
                 <div class="col-lg-12 pt-3">
                     <div class="candidates-grid row" id="container">
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
+                        <!-- <div class="col-lg-6 col-md-6 candidates-grid-item fin">
                             <div class="candidates-item d-flex">
                                 <div class="candidates-number">01</div>
                                 <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
+                                    <img src="assets/img/candi1.webp" alt="candidates images">
+                                </div>
                                 <div class="candidates-text">
                                     <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
+                                        <div class="h5">Lauran Benitez</div>
+                                        <div class="h6">MSS (University of Dhaka)</div>
                                         <div class="experience">Fresher</div>
                                     </div>
                                     <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                        <div class="expertise">
+                                            <ul>
+                                                <li>CSS3</li>
+                                                <li>HTML5</li>
+                                                <li>Javascript</li>
+                                                <li>Bootstrap</li>
+                                                <li>Jquery</li>
+                                            </ul>
+                                        </div>
                                     </div>
                                     <div class="cand-nn mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
+                                        <a href="#" class="biew-btn">View Profile</a>
+                                    </div>
                                     <div class="rating">Rating <span>200</span> </div>
                                 </div>
                             </div>
-                        </div> 
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
-                            <div class="candidates-item d-flex">
-                                <div class="candidates-number">02</div>
-                                <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
-                                <div class="candidates-text">
-                                    <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
-                                        <div class="experience">Fresher</div>
+                        </div>
+                          -->
+                        <div class="top-list-content col-lg-12 candidates-grid-item">
+                            <ul class="topList-bar">
+                                <li>Rank</li>
+                                <li>Candidates</li>
+                                <li>Major</li>
+                                <li>Skill Badges</li>
+                            </ul>
+                            <ul class="topList-item">
+                                <li>
+                                    <div class="number">01</div>
+                                </li>
+                                <li>
+                                    <div class="imag">
+                                        <img src="assets/img/candi1.webp" alt="">
+                                        <ul class="exp">
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                </li>
+                                <li>
+                                    <div class="experience">International finance management</div>
+                                </li>
+                                <li>
+                                    <div class="skill-badges">
+                                        <ul>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
-                                    <div class="rating">Rating <span>200</span> </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
-                            <div class="candidates-item d-flex">
-                                <div class="candidates-number">03</div>
-                                <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
-                                <div class="candidates-text">
-                                    <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
-                                        <div class="experience">Fresher</div>
+                                </li>
+                            </ul>
+                            <ul class="topList-item">
+                                <li>
+                                    <div class="number">02</div>
+                                </li>
+                                <li>
+                                    <div class="imag">
+                                        <img src="assets/img/candi1.webp" alt=""> 
                                     </div>
-                                    <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                </li>
+                                <li>
+                                    <div class="experience">Financial markets and institutions</div>
+                                </li>
+                                <li>
+                                    <div class="skill-badges">
+                                        <ul>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
-                                    <div class="rating">Rating <span>200</span> </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
-                            <div class="candidates-item d-flex">
-                                <div class="candidates-number">05</div>
-                                <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
-                                <div class="candidates-text">
-                                    <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
-                                        <div class="experience">Fresher</div>
+                                </li>
+                            </ul>
+                            <ul class="topList-item">
+                                <li>
+                                    <div class="number">03</div>
+                                </li>
+                                <li>
+                                    <div class="imag">
+                                        <img src="assets/img/candi1.webp" alt="">
+                                        <ul class="exp">
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                </li>
+                                <li>
+                                    <div class="experience">Security analysis and portfolio management</div>
+                                </li>
+                                <li>
+                                    <div class="skill-badges">
+                                        <ul>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn  mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
-                                    <div class="rating">Rating <span>200</span> </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
-                            <div class="candidates-item d-flex">
-                                <div class="candidates-number">04</div>
-                                <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
-                                <div class="candidates-text">
-                                    <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
-                                        <div class="experience">Fresher</div>
+                                </li>
+                            </ul>
+                            <ul class="topList-item">
+                                <li>
+                                    <div class="number">04</div>
+                                </li>
+                                <li>
+                                    <div class="imag">
+                                        <img src="assets/img/candi1.webp" alt="">
+                                        <ul class="exp">
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                </li>
+                                <li>
+                                    <div class="experience">Financial derivatives</div>
+                                </li>
+                                <li>
+                                    <div class="skill-badges">
+                                        <ul>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn  mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
-                                    <div class="rating">Rating <span>200</span> </div>
-                                </div>
-                            </div>
-                        </div> 
-                        <div class="col-lg-6 col-md-6 candidates-grid-item fin"> 
-                            <div class="candidates-item d-flex">
-                                <div class="candidates-number">06</div>
-                                <div class="candidates-img">
-                                    <img src="assets/img/candi1.webp" alt="candidates images"> 
-                                </div> 
-                                <div class="candidates-text">
-                                    <div class="cand-nn">
-                                        <div class="h5">Lauran Benitez</div> 
-                                        <div class="h6">MSS (University of Dhaka)</div> 
-                                        <div class="experience">Fresher</div>
+                                </li>
+                            </ul>
+                            <ul class="topList-item">
+                                <li>
+                                    <div class="number">05</div>
+                                </li>
+                                <li>
+                                    <div class="imag">
+                                        <img src="assets/img/candi1.webp" alt=""> 
                                     </div>
-                                    <div class="cand-nn">
-                                        <div class="expertise">CSS3, HTML5, Javascript Bootstrap, Jquery</div>
+                                </li>
+                                <li>
+                                    <div class="experience">Financial services</div>
+                                </li>
+                                <li>
+                                    <div class="skill-badges">
+                                        <ul>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill1.png" alt=""></li>
+                                            <li><img src="assets/img/skill+.png" alt=""></li>
+                                        </ul>
                                     </div>
-                                    <div class="cand-nn  mt-auto">
-                                        <a href="#" class="theme-btn btn-md">View Profile</a>
-                                    </div> 
-                                    <div class="rating">Rating <span>200</span> </div>
-                                </div>
-                            </div>
-                        </div>  
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="candidates-button pt-5 text-center"> 
+                    <div class="candidates-button pt-5 text-center">
                         <a href="#" class="theme-btn btn-md">
                             View All Candidates
                         </a>
