--- a/slider.html
+++ b/slider.html
@@ -11,7 +11,36 @@
 </head>
 <body>
     
-
+	<div class="col-lg-6 col-md-6 candidates-grid-item fin">
+		<div class="candidates-item d-flex">
+			<div class="candidates-number">01</div>
+			<div class="candidates-img">
+				<img src="assets/img/candi1.webp" alt="candidates images">
+			</div>
+			<div class="candidates-text">
+				<div class="cand-nn">
+					<div class="h5">Lauran Benitez</div>
+					<div class="h6">MSS (University of Dhaka)</div>
+					<div class="experience">Fresher</div>
+				</div>
+				<div class="cand-nn">
+					<div class="expertise">
+						<ul>
+							<li>CSS3</li>
+							<li>HTML5</li>
+							<li>Javascript</li>
+							<li>Bootstrap</li>
+							<li>Jquery</li>
+						</ul>
+					</div>
+				</div>
+				<div class="cand-nn mt-auto">
+					<a href="#" class="biew-btn">View Profile</a>
+				</div>
+				<div class="rating">Rating <span>200</span> </div>
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
