--- a/manufacturing.html
+++ b/manufacturing.html
@@ -96,73 +96,157 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="manufacturing-all">
-                        <article class="manufacturing-jobs-item">
-                            <div class="img">
-                                <img src="assets/img/logo.png" alt="">
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
                             </div>
-                            <a href="#" class="title d-block h5"> Master Scheduler</a>
-                            <div class="job-company h6 ">International Medical Industries</div>
-                            <div class="job-location">Dhaka, Bangladesh</div>
-                            <div class="job-company-footer ">
-                                <p class="date">1 Day Ago</p>
-                                <a href="#" class="theme-btn ms-auto">Apply</a>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/ACI-LOgo.png" alt="">
+                                    </div>
+                                </div>
                             </div>
-                        </article>
-                        <article class="manufacturing-jobs-item">
-                            <div class="img">
-                                <img src="assets/img/logo.png" alt="">
+                        </a>
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
                             </div>
-                            <a href="#" class="title d-block h5"> Master Scheduler</a>
-                            <div class="job-company h6 ">International Medical Industries</div>
-                            <div class="job-location">Dhaka, Bangladesh</div>
-                            <div class="job-company-footer ">
-                                <p class="date">1 Day Ago</p>
-                                <a href="#" class="theme-btn ms-auto">Apply</a>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/ACI-LOgo.png" alt="">
+                                    </div>
+                                </div>
                             </div>
-                        </article>
-                        <article class="manufacturing-jobs-item">
-                            <div class="img">
-                                <img src="assets/img/logo.png" alt="">
+                        </a>
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
                             </div>
-                            <a href="#" class="title d-block h5"> Master Scheduler</a>
-                            <div class="job-company h6 ">International Medical Industries</div>
-                            <div class="job-location">Dhaka, Bangladesh</div>
-                            <div class="job-company-footer ">
-                                <p class="date">1 Day Ago</p>
-                                <a href="#" class="theme-btn ms-auto">Apply</a>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/AKG.png" alt="">
+                                    </div>
+                                </div>
                             </div>
-                        </article>
-                        <article class="manufacturing-jobs-item">
-                            <div class="img">
-                                <img src="assets/img/logo.png" alt="">
+                        </a>
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
                             </div>
-                            <a href="#" class="title d-block h5"> Master Scheduler</a>
-                            <div class="job-company h6 ">International Medical Industries</div>
-                            <div class="job-location">Dhaka, Bangladesh</div>
-                            <div class="job-company-footer ">
-                                <p class="date">1 Day Ago</p>
-                                <a href="#" class="theme-btn ms-auto">Apply</a>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/Akij.png" alt="">
+                                    </div>
+                                </div>
                             </div>
-                        </article>
-                        <article class="manufacturing-jobs-item">
-                            <div class="img">
-                                <img src="assets/img/logo.png" alt="">
+                        </a>
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
                             </div>
-                            <a href="#" class="title d-block h5"> Master Scheduler</a>
-                            <div class="job-company h6 ">International Medical Industries</div>
-                            <div class="job-location">Dhaka, Bangladesh</div>
-                            <div class="job-company-footer ">
-                                <p class="date">1 Day Ago</p>
-                                <a href="#" class="theme-btn ms-auto">Apply</a>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/BA.png" alt="">
+                                    </div>
+                                </div>
                             </div>
-                        </article>
+                        </a>
+                        <a href="manufacturing.html" class="manufacturing-jobs-item">
+                            <div class="manufacturing-dd">
+                                <div class="job-category">
+                                    <i class="fa fa-bullhorn"></i>
+                                    <p>Marketing & Communication</p>
+                                </div>
+                                <div class="title">Software Engineering Team Leader</div>
+                                <ul class="list">
+                                    <li><i class="fa fa-globe"></i><strong>San Francisco, CA</strong> </li>
+                                    <li class="jobT jobFull">Full-time</li>
+                                </ul>
+                            </div>
+                            <div class="jobs-card">
+                                <ul class="jobs-card-left">
+                                    <li><span>1 days ago by</span></li>
+                                    <li><strong>Artistre Studio</strong></li>
+                                </ul>
+                                <div class="jobs-card-right">
+                                    <div class="img">
+                                        <img src="assets/img/companies-logo/Banglalink.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="manufacturing-details">
                         <div class="manufacturing-details-header">
                             <div class="img d-flex gap-3 align-items-center ">
-                                <img src="assets/img/logo.png" alt="">
+                                <img src="assets/img/companies-logo/ACI-LOgo.png" alt="">
                                 <div class="text">
                                     <a href="#" class="title d-block h5"> Master Scheduler</a>
                                     <div class="job-company h6 primary-color">International Medical Industries</div>
